@@ -1,5 +1,8 @@
 2002-11-23  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* gamewin.cc: When combat is paused, you can direct a party member
+	by right-clicking, then clicking on a target to attack.
+
 	* combat.cc,keys.cc,etc.:  Suspend/resume combat (space key).
 	* combat.h (public): Combat class with options.
 	* actors.cc:  Optionally show hits on screen.
